--- a/layouts/index.html
+++ b/layouts/index.html
@@ -163,10 +163,13 @@
 </div>
 
 <div class="container mx-auto px-4 py-20" id="contact">
-    <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
-        <div class="text-gray-500 flex flex-col col-span-1">
+    <div class="text-center pb-6">
+        <h2 class="main-heading">Book a Tour</h2>
+        <div class="divider mx-auto"></div>
+    </div>
+    <div class="grid grid-flow-row lg:grid-cols-4 gap-6">
+        <div class="px-6 text-gray-500 flex flex-col col-span-2">
             <div>
-                <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
                 <p class="mb-4">We can't wait to see you! Give us a call or follow us on social media for center updates, or reach out to schedule a tour.</p>
                 <div class="mb-2">
                     <a href="tel:6478121179" class="flex items-center">
