--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -7,13 +7,13 @@
         <img src="{{ $img.RelPermalink }}" alt="">
     </picture>
     <div class="p-6">
-        <h3 class="text-2xl font-bold mb-1">
+        <h3 class="text-2xl font-bold mb-1 text-center">
             {{ htmlUnescape .name }}
         </h3>
-        <h4 class="text-pink-500 text-lg font-bold">
+        <h4 class="text-pink-500 text-lg font-bold text-center">
             {{ htmlUnescape .position }}
         </h4>
-        <p class="pt-3 text-gray-500">
+        <p class="pt-3 text-gray-500 text-left">
             {{ htmlUnescape .bio }}
         </p>
     </div>
