--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -6,7 +6,7 @@
         </div>
         <div class="relative">
             <div id="map" class="rounded-lg shadow col-span-2 w-full"></div>
-            <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 rounded text-center">
+            <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center">
                 <div class="mt-4">
                     <h2>Aurora</h2>
                     <div class="divider mx-auto"></div>
