--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4 text-sm">
         <a href="tel:6478121179" class="inline-flex items-center">
             <span class="h-5 w-5 mr-1">
-                {{ readFile "assets/images/phone.svg" | safeHTML }}
+                {{ readFile "assets/images/icons/phone.svg" | safeHTML }}
             </span>
             (647) 812-1179
         </a>
