--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,16 +43,15 @@
 
 <div class="py-20">
     <div class="container px-4 mx-auto">
+        <div class="text-center pb-6">
+            <h2 class="main-heading">Location</h2>
+            <div class="divider mx-auto"></div>
+        </div>
         <div class="grid md:grid-cols-3 gap-6">
-            <div class="shadow rounded-lg text-center flex flex-col justify-around">
-                <div class="text-center mt-4">
-                    <h2>Aurora</h2>
-                    <div class="divider mx-auto"></div>
-                </div>
-                <address class="not-italic">
+            <div class="shadow rounded-lg text-center" id="map-overlay">
+                <address class="not-italic mb-8 pt-6">
                     126 Wellington Street West #103<br>
-                    Aurora, Ontario<br>
-                    L4G 2N9
+                    Aurora, Ontario, L4G 2N9
                 </address>
                 <div>
                     <a href="tel:6478121179" class="w-full px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
@@ -154,7 +153,7 @@
             <h2 class="main-heading">Our Talented Team</h2>
             <div class="divider mx-auto"></div>
         </div>
-        <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
+        <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
             {{ range $.Site.Data.staff }}
             {{ partial "staff.html" . }}
             {{ end }}
