Sticky footer and thanks redirect

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -25,3 +25,13 @@
 .two-col li {
     list-style-postion: inside;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
