--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -1,4 +1,4 @@
-<div class="bg-white rounded-lg overflow-hidden shadow-sm">
+<div class="bg-white rounded-lg overflow-hidden shadow">
     {{ $original := resources.Get "images/staff/unknown.jpg" }}
     {{ if .photo }}
     {{ $original = resources.Get .photo }}
