Fix form submission

--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,4 +1,4 @@
-<form method="POST" id="contact" netlify>
+<form method="POST" id="contact" action="/thanks/" netlify>
     <div class="shadow overflow-hidden rounded-lg">
         <div class="px-4 py-5 sm:p-6 bg-white">
             <div class="mb-3">
