--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -14,36 +14,36 @@
                 <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
             </div>
             <div class="mb-3">
-                <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Age of your Children</label>
+                <label for="age[]" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Age of your Children</label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age" class="rounded mr-2">
+                    <input type="checkbox" name="age[infant]" class="rounded mr-2">
                     Infant (1&ndash;18 months)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age" class="rounded mr-2">
+                    <input type="checkbox" name="age[toddler]" class="rounded mr-2">
                     Toddler (18 months&ndash;2&half; years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age" class="rounded mr-2">
+                    <input type="checkbox" name="age[preschool]" class="rounded mr-2">
                     Preschool (2&half;&ndash;4 years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age" class="rounded mr-2">
+                    <input type="checkbox" name="age[kindergarten]" class="rounded mr-2">
                     Kindergarten (4&ndash;5 years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age" class="rounded mr-2">
+                    <input type="checkbox" name="age[before_after]" class="rounded mr-2">
                     Before & After (4&ndash;12 years)
                 </label>
             </div>
             <div class="mb-3">
-                <label for="age" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Type of Tour</label>
+                <label for="tour_type" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Type of Tour</label>
                 <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="accountType" value="inperson">
+                    <input type="radio" class="form-radio" name="tour_type" value="In-person">
                     <span class="ml-2">In-person</span>
                 </label>
                 <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="accountType" value="virtual">
+                    <input type="radio" class="form-radio" name="tour_type" value="Virtual">
                     <span class="ml-2">Virtual</span>
                 </label>
             </div>
