Resize images better

--- a/layouts/partials/facility.html
+++ b/layouts/partials/facility.html
@@ -1,8 +1,8 @@
 <div class="shadow rounded-lg overflow-hidden">
     <picture>
-        {{ $img := .Resize "x600 webp" }}
+        {{ $img := .Resize "600x webp" }}
         <source srcset="{{ $img.RelPermalink }}" type="image/webp">
-        {{ $img := .Resize "x600" }}
+        {{ $img := .Resize "600x" }}
         <img src="{{ $img.RelPermalink }}" alt="">
     </picture>
 </div>
