--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -16,23 +16,23 @@
             <div class="mb-3">
                 <label for="age[]" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Age of your Children</label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[infant]" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Infant" class="rounded mr-2">
                     Infant (1&ndash;18 months)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[toddler]" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Toddler" class="rounded mr-2">
                     Toddler (18 months&ndash;2&half; years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[preschool]" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Preschool" class="rounded mr-2">
                     Preschool (2&half;&ndash;4 years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[kindergarten]" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Kindergarten" class="rounded mr-2">
                     Kindergarten (4&ndash;5 years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[before_after]" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Before/After" class="rounded mr-2">
                     Before & After (4&ndash;12 years)
                 </label>
             </div>
