--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,17 +6,17 @@
     <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
         <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
             <div class="flex items-center justify-between w-full md:w-auto">
-                <a href="#">
+                {{ $logo := resources.Get "images/logo.png" }}
+                <a href="/">
                     <span class="sr-only">Workflow</span>
-                    <img class="h-8 w-auto sm:h-10" src="/logo.png">
+                    <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
                 </a>
                 <div class="-mr-2 flex items-center md:hidden">
                     <button type="button" @click="open = true" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-offset-pink-600" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
-                        <!-- Heroicon name: outline/menu -->
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                        </svg>
+                        <span class="h-6 w-6">
+                            {{ readFile "assets/images/icons/menu.svg" | safeHTML }}
+                        </span>
                     </button>
                 </div>
             </div>
@@ -47,10 +47,9 @@
             <div class="-mr-2">
                 <button type="button" @click="open = false" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-offset-pink-600">
                     <span class="sr-only">Close main menu</span>
-                    <!-- Heroicon name: outline/x -->
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
+                    <span class="h-6 w-6">
+                        {{ readFile "assets/images/icons/close.svg" | safeHTML }}
+                    </span>
                 </button>
             </div>
         </div>
