--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -32,7 +32,7 @@
                     Kindergarten (4&ndash;5 years)
                 </label>
                 <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
-                    <input type="checkbox" name="age[]" value="Before/After" class="rounded mr-2">
+                    <input type="checkbox" name="age[]" value="Before & After" class="rounded mr-2">
                     Before & After (4&ndash;12 years)
                 </label>
             </div>
