--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -43,11 +43,11 @@
                     Type of Tour
                 </legend>
                 <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="tour_type" value="In-person">
+                    <input type="radio" class="form-radio" name="tour_type" value="In-person" required>
                     <span class="ml-2">In-person</span>
                 </label>
                 <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="tour_type" value="Virtual">
+                    <input type="radio" class="form-radio" name="tour_type" value="Virtual" required>
                     <span class="ml-2">Virtual</span>
                 </label>
             </fieldset>
