--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -4,8 +4,8 @@
             <h2 class="main-heading">Location</h2>
             <div class="divider mx-auto"></div>
         </div>
-        <div class="relative">
-            <div id="map" class="rounded-lg shadow col-span-2 w-full"></div>
+        <div class="relative shadow rounded-lg" style="background-image: url('/map-trimmed.svg'); height: 500px; background-size: cover; background-position: 50% 50%;">
+            <div id="map2" class="rounded-lg shadow col-span-2 w-full"></div>
             <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center shadow-sm">
                 <div class="mt-4">
                     <h2>Aurora</h2>
