Use img tag instead of background

--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -4,8 +4,10 @@
             <h2 class="main-heading">Location</h2>
             <div class="divider mx-auto"></div>
         </div>
-        <div class="relative shadow rounded-lg" style="background-image: url('/map-trimmed.svg'); height: 500px; background-size: cover; background-position: 50% 50%;">
-            <div id="map2" class="rounded-lg shadow col-span-2 w-full"></div>
+        <div class="relative shadow rounded-lg overflow-hidden">
+
+            <img src="/map-trimmed.svg" alt="" class="w-full" style="height: 500px; object-fit: cover; object-position: center;" draggable="false">
+
             <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center shadow-sm">
                 <div class="mt-4">
                     <h2>Aurora</h2>
@@ -22,6 +24,7 @@
                 </div>
                 <span class="block">(647) 812-1179</span>
             </div>
+
         </div>
         <div class="grid md:grid-cols-3 gap-6">
             {{ $map := resources.Get "images/map.png" }}
