--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -6,7 +6,7 @@
         </div>
         <div class="relative shadow rounded-lg overflow-hidden">
 
-            <img src="/map-trimmed.svg" alt="" class="w-full" style="height: 500px; object-fit: cover; object-position: center;" draggable="false">
+            <img src="/map-trimmed.svg" alt="" class="w-full object-cover object-center" style="height: 500px;" draggable="false">
 
             <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center shadow-sm">
                 <div class="mt-4">
