--- a/layouts/partials/program.html
+++ b/layouts/partials/program.html
@@ -4,7 +4,7 @@
         {{ $img := $original.Resize "x600 webp" }}
         <source srcset="{{ $img.RelPermalink }}" type="image/webp">
         {{ $img := $original.Resize "x600" }}
-        <img src="{{ $img.RelPermalink }}" alt="">
+        <img src="{{ $img.RelPermalink }}" alt="" loading="lazy">
     </picture>
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1">
