--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -7,7 +7,7 @@
         {{ $img := $original.Fill "800x533 smart webp" }}
         <source srcset="{{ $img.RelPermalink }}" type="image/webp">
         {{ $img := $original.Fill "800x533" }}
-        <img src="{{ $img.RelPermalink }}" alt="">
+        <img src="{{ $img.RelPermalink }}" alt="" loading="lazy">
     </picture>
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1 text-center">
