--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -6,7 +6,7 @@
                     @click="selected !== {{ $i }} ? selected = {{ $i }} : selected = null">
                 <div class="flex items-center justify-between">
                     <span class="text-pink-500 text-lg font-bold">{{ $item.question }}</span>
-                    <span :class="{ 'transform rotate-180': selected == {{ $i }} }" class="h-5 w-5">
+                    <span :class="{ 'rotate-180': selected == {{ $i }} }" class="h-5 w-5 transform transition-transform">
                         {{ readFile "assets/images/icons/chevron.svg" | safeHTML }}
                     </span>
                 </div>
