--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,8 @@
     <title>{{ .Title }}</title>
 
     <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="preconnect" href="https://www.facebook.com">
+    <link rel="preconnect" href="https://connect.facebook.net">
 
     {{ $options := dict "noMap" true }}
     {{ $styles := resources.Get "styles/app.css" }}
