--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -5,9 +5,11 @@
             <div class="divider mx-auto"></div>
         </div>
         <div class="relative shadow rounded-lg overflow-hidden">
-
-            <img src="/map-trimmed.svg" alt="" class="w-full object-cover object-center" style="height: 500px;" draggable="false">
-
+            <img src="/map-trimmed.svg"
+                 alt="Map of Aurora"
+                 class="w-full object-cover object-center"
+                 style="height: 500px;"
+                 draggable="false">
             <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center shadow-sm">
                 <div class="mt-4">
                     <h2>Aurora</h2>
@@ -24,7 +26,6 @@
                 </div>
                 <span class="block">(647) 812-1179</span>
             </div>
-
         </div>
     </div>
 </div>
