--- a/layouts/partials/facility.html
+++ b/layouts/partials/facility.html
@@ -3,6 +3,6 @@
         {{ $img := .Resize "600x webp" }}
         <source srcset="{{ $img.RelPermalink }}" type="image/webp">
         {{ $img := .Resize "600x" }}
-        <img src="{{ $img.RelPermalink }}" alt="" loading="lazy">
+        <img src="{{ $img.RelPermalink }}" loading="lazy" draggable="false">
     </picture>
 </div>
