--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -17,36 +17,36 @@
                 <legend class="block text-xs mb-1 font-medium text-gray-500 uppercase">
                     Age of your Children
                 </legend>
-                <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
+                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Infant" class="rounded mr-2">
                     Infant (1&ndash;18 months)
                 </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
+                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Toddler" class="rounded mr-2">
                     Toddler (18 months&ndash;2&half; years)
                 </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
+                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Preschool" class="rounded mr-2">
                     Preschool (2&half;&ndash;4 years)
                 </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
+                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Kindergarten" class="rounded mr-2">
                     Kindergarten (4&ndash;5 years)
                 </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 mb-1">
+                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Before & After" class="rounded mr-2">
                     Before & After (4&ndash;12 years)
                 </label>
             </fieldset>
-            <fieldset class="mb-3">
+            <fieldset>
                 <legend class="block text-xs mb-1 font-medium text-gray-500 uppercase">
                     Type of Tour
                 </legend>
-                <label class="inline-flex items-center text-sm font-medium text-gray-700">
+                <label class="inline-flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="radio" class="form-radio" name="tour_type" value="In-person" required>
                     <span class="ml-2">In-person</span>
                 </label>
-                <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700">
+                <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700 py-1">
                     <input type="radio" class="form-radio" name="tour_type" value="Virtual" required>
                     <span class="ml-2">Virtual</span>
                 </label>
