--- a/layouts/partials/values.html
+++ b/layouts/partials/values.html
@@ -1,6 +1,6 @@
 <div class="rounded-md p-8 shadow text-center h-full flex flex-col justify-between">
     {{ $image := resources.Get .icon }}
-    <img src="{{ $image.RelPermalink }} " class="mx-auto mb-5">
+    <img src="{{ $image.RelPermalink }}" alt="{{ .title }}" class="mx-auto mb-5">
     <h3 class="text-xl font-bold mb-2">{{ htmlUnescape .title }}</h3>
     <p class="text-gray-500">{{ htmlUnescape .text }}</p>
 </div>
