--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,9 +2,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {{/*
-    <meta name="theme-color" content="#317EFB"> */}}
+    <meta name="theme-color" content="#317EFB">
     {{ hugo.Generator }}
+    {{ template "_internal/schema.html" . }}
+    {{ template "_internal/opengraph.html" . }}
 
     <title>{{ .Title }}</title>
 
