--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -1,31 +1,31 @@
 <div class="py-20">
     <div class="container px-4 mx-auto">
+        
         <div class="text-center pb-6">
             <h2 class="main-heading">Location</h2>
             <div class="divider mx-auto"></div>
         </div>
-        <div class="relative shadow rounded-lg overflow-hidden">
-            <img src="/map-trimmed.svg"
-                 alt="Map of Aurora"
-                 class="w-full object-cover object-center"
-                 style="height: 500px;"
-                 draggable="false">
-            <div class="absolute bg-white z-10 top-12 bottom-12 left-12 p-6 right-12 sm:right-auto rounded text-center shadow-sm">
-                <div class="mt-4">
-                    <h2>Aurora</h2>
-                    <div class="divider mx-auto"></div>
-                </div>
+
+        <div class="relative card">
+            <img src="/map-trimmed.svg" alt="Map of Aurora" class="object-cover md:absolute w-full h-full">
+
+            <div class="z-50 rounded text-center md:shadow-sm md:m-5 py-6 md:w-72 md:relative w-full bg-white">
                 <address class="not-italic block">
-                    126 Wellington Street West #103<br>
-                    Aurora, Ontario, L4G 2N9
+                    Unit 103<br>
+                    126 Wellington St. W<br>
+                    Aurora, ON<br>
+                    L4G 2N9
                 </address>
-                <div class="flex justify-center my-4">
-                    <a href="tel:6478121179" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
-                        Call Now
-                    </a>
+                <div>
+                    <div class="flex justify-center mt-4 mb-2">
+                        <a href="tel:6478121179" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                            Call Us
+                        </a>
+                    </div>
+                    <span class="block text-sm text-gray-600">(647) 812-1179</span>
                 </div>
-                <span class="block">(647) 812-1179</span>
             </div>
+
         </div>
     </div>
 </div>
