--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -5,7 +5,7 @@
             <div class="divider mx-auto"></div>
         </div>
         <div class="relative card">
-            <img src="/map-trimmed.svg" alt="Map of Aurora" class="object-cover md:absolute w-full h-full">
+            <img src="/map-trimmed.svg" alt="Map of Aurora" class="object-cover md:absolute w-full h-full" draggable="false">
             <div class="z-50 rounded text-center md:shadow-sm md:m-5 py-10 md:w-72 md:relative w-full bg-white">
                 <address class="not-italic block">
                     Unit 103<br>
