--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -1,11 +1,12 @@
 <div class="bg-white rounded-lg overflow-hidden shadow">
     {{ $original := resources.Get "images/staff/unknown.jpg" }}
+    {{ $original = $original.Fill "800x533" }}
     {{ if .photo }}
     {{ $original = resources.Get .photo }}
     {{ end }}
     <picture>
-        {{ $img := $original.Resize "800x webp" }}
-        <source srcset="{{ $img.RelPermalink }}" type="image/webp">
+        <!-- {{ $img := $original.Resize "800x webp photo" }}
+        <source srcset="{{ $img.RelPermalink }}" type="image/webp"> -->
         {{ $img := $original.Resize "800x jpg" }}
         <img src="{{ $img.RelPermalink }}" alt="{{ .name }}" loading="lazy">
     </picture>
