--- a/layouts/section/camp.html
+++ b/layouts/section/camp.html
@@ -3,8 +3,7 @@
 
 {{ partial "camp/menu.html" . }}
 
-{{ partial "camp/itinerary.html" . }}
-
+{{ partial "camp/itinerary2.html" . }}
 
 <div class="container mx-auto px-4 py-20">
     <div class="text-center pb-6">
