--- a/layouts/partials/camp/itinerary2.html
+++ b/layouts/partials/camp/itinerary2.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-20">
+<div class="container mx-auto px-4 py-20" id="itinerary">
     <div class="text-center pb-6">
         <h2 class="main-heading">Program Itinerary</h2>
         <div class="divider mx-auto"></div>
@@ -44,5 +44,4 @@
             </tr>
         </tbody>
     </table>
-
 </div>
