--- a/layouts/partials/camp/menu.html
+++ b/layouts/partials/camp/menu.html
@@ -1,146 +1,150 @@
-<div class="container mx-auto px-4 py-20">
-    <div class="text-center pb-6">
-        <h2 class="main-heading">Meal Plan</h2>
-        <div class="divider mx-auto"></div>
+<div class="bg-gradient py-20" id="menu">
+    <div class="container mx-auto px-4">
+        <div class="text-center pb-6">
+            <h2 class="main-heading">Meal Plan</h2>
+            <div class="divider mx-auto"></div>
+        </div>
+        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+            <table class="min-w-full divide-y divide-gray-200">
+                <thead class="bg-gray-50">
+                    <tr>
+                        <th><span class="sr-only">Meal</span></th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Monday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tuesday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Wednesday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Thursday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Friday</th>
+                    </tr>
+                </thead>
+                <tbody class="bg-white divide-y divide-gray-200">
+                    <tr class="border-b border-gray-200 text-sm font-medium">
+                        <td class="font-bold">
+                            Morning Snack
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Cereal</li>
+                                <li>Apples</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>French toast sticks</li>
+                                <li>Banana slices</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Yogurt with Berries</li>
+                                <li>Graham Crackers</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Oatmeal
+                                <li>
+                                <li>Apples & Cinammon</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Breakfast burrito</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-gray-200 text-sm font-medium">
+                        <td class="font-bold">
+                            Lunch
+                        </td>
+                        <td>
+                            <ul>
+                                <li>English Muffin Pizzas</li>
+                                <li>Cucumber slices</li>
+                                <li>Orange wedges</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Diced orange chicken</li>
+                                <li>Rice noodles</li>
+                                <li>Green beans</li>
+                                <li>Melon</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Spinach and Ricotta Lasangna</li>
+                                <li>Corn on the cob</li>
+                                <li>Pears</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Chicken noodle soup</li>
+                                <li>Grilled cheese sandwiches</li>
+                                <li>Kiwi</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Tilapia with Lemon & Dill</li>
+                                <li>Seasoned Rice Broccoli & Cauliflower</li>
+                                <li>Bananas</li>
+                                <li>Milk</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr class="border-b border-gray-200 text-sm font-medium">
+                        <td class="font-bold">
+                            Afternoon Snack
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Chocolate</li>
+                                <li>Zucchini Muffins</li>
+                                <li>Water</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Grapes</li>
+                                <li>Cheese Cubes</li>
+                                <li>Water</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Breadsticks</li>
+                                <li>Hummus</li>
+                                <li>Water</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Arrowroot</li>
+                                <li>Apple Sauce</li>
+                                <li>Water</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Tostitos</li>
+                                <li>Salsa</li>
+                                <li>Water</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <table class="table-auto w-full">
-        <thead>
-            <tr class="border-b border-gray-200">
-                <th></th>
-                <th class="w-1/6">Monday</th>
-                <th class="w-1/6">Tuesday</th>
-                <th class="w-1/6">Wednesday</th>
-                <th class="w-1/6">Thursday</th>
-                <th class="w-1/6">Friday</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="border-b border-gray-200">
-                <td class="bg-gray-50">
-                    Morning Snack
-                </td>
-                <td>
-                    <ul>
-                        <li>Cereal</li>
-                        <li>Apples</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>French toast sticks</li>
-                        <li>Banana slices</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Yogurt with Berries</li>
-                        <li>Graham Crackers</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Oatmeal
-                        <li>
-                        <li>Apples & Cinammon</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Breakfast burrito</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr class="border-b border-gray-200">
-                <td class="bg-gray-50">
-                    Lunch
-                </td>
-                <td>
-                    <ul>
-                        <li>English Muffin Pizzas</li>
-                        <li>Cucumber slices</li>
-                        <li>Orange wedges</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Diced orange chicken</li>
-                        <li>Rice noodles</li>
-                        <li>Green beans</li>
-                        <li>Melon</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Spinach and Ricotta Lasangna</li>
-                        <li>Corn on the cob</li>
-                        <li>Pears</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Chicken noodle soup</li>
-                        <li>Grilled cheese sandwiches</li>
-                        <li>Kiwi</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Tilapia with Lemon & Dill</li>
-                        <li>Seasoned Rice Broccoli & Cauliflower</li>
-                        <li>Bananas</li>
-                        <li>Milk</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr class="border-b border-gray-200">
-                <td class="bg-gray-50">
-                    Afternoon Snack
-                </td>
-                <td>
-                    <ul>
-                        <li>Chocolate</li>
-                        <li>Zucchini Muffins</li>
-                        <li>Water</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Grapes</li>
-                        <li>Cheese Cubes</li>
-                        <li>Water</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Breadsticks</li>
-                        <li>Hummus</li>
-                        <li>Water</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Arrowroot</li>
-                        <li>Apple Sauce</li>
-                        <li>Water</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Tostitos</li>
-                        <li>Salsa</li>
-                        <li>Water</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
 </div>
