--- a/layouts/section/camp.html
+++ b/layouts/section/camp.html
@@ -1,14 +1,20 @@
 {{ define "main" }}
-{{ .Content }}
 
-{{ partial "camp/menu.html" . }}
+{{ .Content }}
 
 {{ partial "camp/itinerary2.html" . }}
 
-<div class="container mx-auto px-4 py-20">
+{{ partial "camp/menu.html" . }}
+
+<div class="container px-4 mx-auto py-20">
     <div class="text-center pb-6">
         <h2 class="main-heading">Leadership Team</h2>
         <div class="divider mx-auto"></div>
+    </div>
+    <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
+        {{ range $.Site.Data.staff }}
+        {{ partial "staff.html" . }}
+        {{ end }}
     </div>
 </div>
 
