--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -5,10 +5,10 @@
     {{ $original = resources.Get .photo }}
     {{ end }}
     <picture>
-        <!-- {{ $img := $original.Resize "800x webp photo" }}
-        <source srcset="{{ $img.RelPermalink }}" type="image/webp"> -->
-        {{ $img := $original.Resize "800x jpg" }}
-        <img src="{{ $img.RelPermalink }}" alt="{{ .name }}" loading="lazy">
+        {{ $img := $original.Resize "800x534 webp photo" }}
+        <source srcset="{{ $img.RelPermalink }}" type="image/webp">
+        {{ $img := $original.Resize "800x534 jpg" }}
+        <img src="{{ $img.RelPermalink }}" alt="{{ .name }}" loading="lazy" draggable="false">
     </picture>
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1 text-center">
