Update styling, add pricing section

--- a/layouts/section/camp.html
+++ b/layouts/section/camp.html
@@ -48,9 +48,18 @@
 </div>
 
 <div class="container mx-auto px-4 py-20">
-    <div class="text-center pb-6">
-        <h2 class="main-heading">Pricing</h2>
-        <div class="divider mx-auto"></div>
+    <div class="w-full bg-blue-500 rounded-xl">
+        <div class="flex justify-between items-center p-5 py-10 text-white">
+            <h2 class="text-3xl">Two Camp Pricing</h2>
+            <div>
+                <span class="font-bold text-6xl">$50</span>
+                <span class="text-xl">/day</span>
+            </div>
+            <div>sdfsdfdsf</div>
+            <a href="" class="bg-white rounded-full px-8 py-3 text-blue-500 font-bold">
+                Sign up Now
+            </a>
+        </div>
     </div>
 </div>
 
