--- a/layouts/partials/camp/menu.html
+++ b/layouts/partials/camp/menu.html
@@ -6,19 +6,19 @@
         </div>
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
             <table class="min-w-full divide-y divide-gray-200">
-                <thead class="bg-gray-50">
+                <thead class="bg-pink-600">
                     <tr>
                         <th><span class="sr-only">Meal</span></th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Monday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tuesday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Wednesday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Thursday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Friday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Monday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Tuesday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Wednesday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Thursday</th>
+                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Friday</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
-                    <tr class="border-b border-gray-200 text-sm font-medium">
-                        <td class="font-bold">
+                    <tr class="border-b border-gray-200 text-sm">
+                        <td class="font-medium">
                             Morning Snack
                         </td>
                         <td>
@@ -57,8 +57,8 @@
                             </ul>
                         </td>
                     </tr>
-                    <tr class="border-b border-gray-200 text-sm font-medium">
-                        <td class="font-bold">
+                    <tr class="border-b border-gray-200 text-sm">
+                        <td class="font-medium">
                             Lunch
                         </td>
                         <td>
@@ -103,8 +103,8 @@
                             </ul>
                         </td>
                     </tr>
-                    <tr class="border-b border-gray-200 text-sm font-medium">
-                        <td class="font-bold">
+                    <tr class="border-b border-gray-200 text-sm">
+                        <td class="font-medium">
                             Afternoon Snack
                         </td>
                         <td>
