--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="bg-pink-600 text-white py-2">
-    <div class="container mx-auto px-4 text-sm flex items-center justify-between">
+    <div class="container mx-auto text-sm flex items-center justify-between">
         <a href="tel:6478121179" class="inline-flex items-center">
             <span class="h-5 w-5 mr-1">
                 {{ readFile "assets/images/icons/phone.svg" | safeHTML }}
