--- a/layouts/partials/camp/menu.html
+++ b/layouts/partials/camp/menu.html
@@ -1,150 +1,148 @@
-<div class="bg-gradient py-20" id="menu">
-    <div class="container mx-auto px-4">
-        <div class="text-center pb-6">
-            <h2 class="main-heading">Meal Plan</h2>
-            <div class="divider mx-auto"></div>
-        </div>
-        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-            <table class="min-w-full divide-y divide-gray-200">
-                <thead class="bg-pink-600">
-                    <tr>
-                        <th><span class="sr-only">Meal</span></th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Monday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Tuesday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Wednesday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Thursday</th>
-                        <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Friday</th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200">
-                    <tr class="border-b border-gray-200 text-sm">
-                        <td class="font-medium">
-                            Morning Snack
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Cereal</li>
-                                <li>Apples</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>French toast sticks</li>
-                                <li>Banana slices</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Yogurt with Berries</li>
-                                <li>Graham Crackers</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Oatmeal
-                                <li>
-                                <li>Apples & Cinammon</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Breakfast burrito</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                    </tr>
-                    <tr class="border-b border-gray-200 text-sm">
-                        <td class="font-medium">
-                            Lunch
-                        </td>
-                        <td>
-                            <ul>
-                                <li>English Muffin Pizzas</li>
-                                <li>Cucumber slices</li>
-                                <li>Orange wedges</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Diced orange chicken</li>
-                                <li>Rice noodles</li>
-                                <li>Green beans</li>
-                                <li>Melon</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Spinach and Ricotta Lasangna</li>
-                                <li>Corn on the cob</li>
-                                <li>Pears</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Chicken noodle soup</li>
-                                <li>Grilled cheese sandwiches</li>
-                                <li>Kiwi</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Tilapia with Lemon & Dill</li>
-                                <li>Seasoned Rice Broccoli & Cauliflower</li>
-                                <li>Bananas</li>
-                                <li>Milk</li>
-                            </ul>
-                        </td>
-                    </tr>
-                    <tr class="border-b border-gray-200 text-sm">
-                        <td class="font-medium">
-                            Afternoon Snack
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Chocolate</li>
-                                <li>Zucchini Muffins</li>
-                                <li>Water</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Grapes</li>
-                                <li>Cheese Cubes</li>
-                                <li>Water</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Breadsticks</li>
-                                <li>Hummus</li>
-                                <li>Water</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Arrowroot</li>
-                                <li>Apple Sauce</li>
-                                <li>Water</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Tostitos</li>
-                                <li>Salsa</li>
-                                <li>Water</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+<table class="min-w-full w-max">
+    <thead class="bg-pink-600">
+        <tr>
+            <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Day</th>
+            <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Morning Snack</th>
+            <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Lunch</th>
+            <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Afternoon Snack</th>
+        </tr>
+    </thead>
+    <tbody class="bg-white text-sm">
+        <tr>
+            <td class="font-medium w-1/4">
+                Monday
+            </td>
+            <td class="w-1/4">
+                <ul>
+                    <li>Cereal</li>
+                    <li>Apples</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td class="w-1/4">
+                <ul>
+                    <li>English Muffin Pizzas</li>
+                    <li>Cucumber slices</li>
+                    <li>Orange wedges</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td class="w-1/4">
+                <ul>
+                    <li>Chocolate</li>
+                    <li>Zucchini Muffins</li>
+                    <li>Water</li>
+                </ul>
+            </td>
+        </tr>
+        <tr class="bg-gray-50">
+            <td class="font-medium">
+                Tuesday
+            </td>
+            <td>
+                <ul>
+                    <li>French toast sticks</li>
+                    <li>Banana slices</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Diced orange chicken</li>
+                    <li>Rice noodles</li>
+                    <li>Green beans</li>
+                    <li>Melon</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Grapes</li>
+                    <li>Cheese Cubes</li>
+                    <li>Water</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td class="font-medium">
+                Wednesday
+            </td>
+            <td>
+                <ul>
+                    <li>Yogurt with Berries</li>
+                    <li>Graham Crackers</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Spinach and Ricotta Lasangna</li>
+                    <li>Corn on the cob</li>
+                    <li>Pears</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Breadsticks</li>
+                    <li>Hummus</li>
+                    <li>Water</li>
+                </ul>
+            </td>
+        </tr>
+        <tr class="bg-gray-50">
+            <td class="font-medium">
+                Thursday
+            </td>
+            <td>
+                <ul>
+                    <li>Oatmeal
+                    <li>
+                    <li>Apples & Cinammon</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Chicken noodle soup</li>
+                    <li>Grilled cheese sandwiches</li>
+                    <li>Kiwi</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Arrowroot</li>
+                    <li>Apple Sauce</li>
+                    <li>Water</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td class="font-medium">
+                Friday
+            </td>
+            <td>
+                <ul>
+                    <li>Breakfast burrito</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Tilapia with Lemon & Dill</li>
+                    <li>Seasoned Rice Broccoli & Cauliflower</li>
+                    <li>Bananas</li>
+                    <li>Milk</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Tostitos</li>
+                    <li>Salsa</li>
+                    <li>Water</li>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
