--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
-<div class="bg-gradient">
-    <div class="container mx-auto p-6">
+{{/*  #2E2E2E  */}}
+<div class="bg-gray-800 text-white mt-20">
+    <div class="container mx-auto py-8">
         &copy;{{ now.Year }} Angelic Treasures Christian Daycare
     </div>
 </div>
