--- a/layouts/section/camp.html
+++ b/layouts/section/camp.html
@@ -2,7 +2,28 @@
 
 {{ .Content }}
 
-{{ partial "camp/itinerary2.html" . }}
+<div class="container bg-white mx-auto py-5">
+    {{ $logo := resources.Get "images/logo.png" }}
+    <a href="/">
+        <span class="sr-only">Workflow</span>
+        <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
+    </a>
+</div>
+
+<div class="h-96 relative">
+    <div class="h-full overflow-hidden absolute inset-x-0 z-0">
+        <picture class="flex w-full h-full">
+            {{ $hero := resources.Get "images/hero2.jpg" }}
+            {{ $img := $hero.Resize "1600x webp" }}
+            <source srcset="{{ $img.RelPermalink }}" type="image/webp" class="object-cover">
+            {{ $img := $hero.Resize "1600x" }}
+            <img src="{{ $img.RelPermalink }}" alt="Picture of baby" class="object-cover block w-full">
+        </picture>
+    </div>
+    <div class="relative z-10">
+        <input type="text" class="bg-white rounded-lg">
+    </div>
+</div>
 
 <div class="py-20">
     <div class="container px-4 mx-auto">
@@ -18,9 +39,7 @@
     </div>
 </div>
 
-{{ partial "camp/menu.html" . }}
-
-<div class="container px-4 mx-auto py-20">
+<div class="container px-4 mx-auto pb-20">
     <div class="text-center pb-6">
         <h2 class="main-heading">Leadership Team</h2>
         <div class="divider mx-auto"></div>
@@ -32,37 +51,27 @@
     </div>
 </div>
 
-<div class="bg-gradient py-20" id="facilities">
-    <div class="container px-4 mx-auto">
+<div class="bg-gradient py-20" id="menu">
+    <div class="container mx-auto px-4">
         <div class="text-center pb-6">
-            <h2 class="main-heading">See Our Facilities</h2>
+            <h2 class="main-heading">Program Itinerary</h2>
             <div class="divider mx-auto"></div>
         </div>
-        <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
-            {{ $images := resources.Match "images/facilities/*" }}
-            {{ range $i := $images }}
-            {{ partial "facility.html" . }}
-            {{ end }}
+        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+            {{ partial "camp/itenerary2.html" . }}
+        </div>
+        <div class="text-center pb-6 mt-20">
+            <h2 class="main-heading">Meal Plan</h2>
+            <div class="divider mx-auto"></div>
+        </div>
+        <div class="shadow overflow-x-auto border-b border-gray-200 sm:rounded-lg">
+            {{ partial "camp/menu.html" . }}
         </div>
     </div>
 </div>
 
-<div class="container mx-auto px-4 py-20">
-    <div class="w-full bg-blue-500 rounded-xl">
-        <div class="flex justify-between items-center p-5 py-10 text-white">
-            <h2 class="text-3xl">Two Camp Pricing</h2>
-            <div>
-                <span class="font-bold text-6xl">$50</span>
-                <span class="text-xl">/day</span>
-            </div>
-            <div>sdfsdfdsf</div>
-            <a href="" class="bg-white rounded-full px-8 py-3 text-blue-500 font-bold">
-                Sign up Now
-            </a>
-        </div>
-    </div>
-</div>
+{{ partial "camp/pricing.html" . }}
 
-{{ partial "partials/camp/form.html" . }}
+{{ partial "camp/form.html" . }}
 
 {{ end }}
