--- a/layouts/partials/camp/pricing.html
+++ b/layouts/partials/camp/pricing.html
@@ -1,3 +1,4 @@
+<!--
 <div class="container mx-auto px-4 py-20">
     <div class="w-full bg-blue-500 rounded-xl">
         <div class="flex justify-between items-stretch p-5 py-10 text-white divide-x-2 divide-dashed">
@@ -11,7 +12,7 @@
                 </div>
             </div>
             <div class="w-1/4 p-5 flex items-center">
-                sdfsdf
+                Two week minimum
             </div>
             <div class="w-1/4 p-5 flex items-center">
                 <a href="" class="bg-white rounded-full px-8 py-3 text-blue-500 font-bold mx-auto">
@@ -19,5 +20,20 @@
                 </a>
             </div>
         </div>
+    </div>
+</div>
+-->
+
+
+<div class="rounded-xl shadow flex flex-col bg-blue-500 p-5 text-white">
+    <div>
+        <h4 class="text-xl font-bold mb-2">Pricing</h4>
+    </div>
+    <div>
+        <span class="font-extrabold text-6xl">$50</span>    
+        <span class="text-xl font-medium">/day</span>
+    </div>
+    <div class="pt-3">
+        Two week minimum enrollment
     </div>
 </div>
