--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-800 text-white mt-20">
+<div class="bg-gray-800 text-white">
     <div class="container mx-auto py-8">
         &copy;{{ now.Year }} Angelic Treasures Christian Daycare
     </div>
