--- a/layouts/index.html
+++ b/layouts/index.html
@@ -130,7 +130,7 @@
     </div>
 </div>
 
-<div class="container mx-auto px-4 pt-20" id="contact">
+<div class="container mx-auto px-4 py-20" id="contact">
     <div class="text-center pb-6">
         <h2 class="main-heading">Book a Tour</h2>
         <div class="divider mx-auto"></div>
@@ -138,7 +138,7 @@
     <div class="grid grid-flow-row lg:grid-cols-3 gap-6">
         <div class="text-gray-500 px-4 py-5 sm:p-6">
             <h4 class="text-xl text-black font-bold mb-2">Contact Information</h4>
-            <p class="mb-4">Give us a call, follow us on social media or book a center tour using Calendly or the form.</p>
+            <p class="mb-4 text-justify">Give us a call, follow us on social media or get in touch with the form and we will get back to you as soon as we can.</p>
             <div class="mb-2">
                 <a href="tel:6478121179" class="flex items-center">
                     <div class="h-6 w-6 mr-2">
