--- a/layouts/partials/camp/pricing.html
+++ b/layouts/partials/camp/pricing.html
@@ -33,7 +33,7 @@
         <span class="font-extrabold text-6xl">$50</span>    
         <span class="text-xl font-medium">/day</span>
     </div>
-    <div class="pt-3">
-        Two week minimum enrollment
+    <div class="pt-3 text-sm text-gray-100">
+        <span style="margin-right:2px;">&dagger;</span>Two week minimum enrollment
     </div>
 </div>
