--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -9,7 +9,7 @@
     </a>
 </div>
 
-<div class="relative h-96" style="height: 36rem;">
+<div class="relative h-96" style="height: 48rem;">
     <div class="h-full overflow-hidden absolute inset-x-0 z-0">
         <picture class="flex w-full h-full">
             {{ $hero := resources.Get "images/camp-hero.jpg" }}
@@ -19,11 +19,15 @@
             <img src="{{ $img.RelPermalink }}" alt="Picture of baby" class="object-cover block w-full">
         </picture>
     </div>
-    <div class="absolute z-10 bottom-0 inset-x-0">
-        <div class="container mx-auto text-center py-5">
-            <h1 class="text-5xl font-bold text-white mb-5">
-                Angelic Treasures <span class="text-blue-500">Daycamp</span>
+    <div class="absolute z-10 bottom-0 inset-x-0 py-10" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 40%, rgba(0, 0, 0, .8) 100%);">
+        <div class="container mx-auto text-center flex flex-col">
+            <h1 class="text-5xl font-extrabold text-white mb-3">
+                Angelic Treasures Daycamp
             </h1>
+            <p class="text-white mb-5 text-lg italic">Join Us for a Summer of Fun, Learning and New Friends</p>
+            <a href="#contact" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10 place-self-center">
+                Sign Up Today
+            </a>
             <!--
             <form class="flex w-full max-w-sm mx-auto space-x-3">
                 <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
