--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -81,7 +81,7 @@
             <div class="divider mx-auto"></div>
         </div>
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-            {{ partial "camp/itenerary" . }}
+            {{ partial "camp/itinerary" . }}
         </div>
     </div>
 </div>
@@ -93,7 +93,7 @@
             <div class="divider mx-auto"></div>
         </div>
         <div class="shadow overflow-x-auto border-b border-gray-200 sm:rounded-lg">
-            {{ partial "camp/menu" . }}
+            {{ partial "camp/meals" . }}
         </div>
     </div>
 </div>
