--- a/layouts/partials/camp/meals.html
+++ b/layouts/partials/camp/meals.html
@@ -7,7 +7,7 @@
             <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Afternoon Snack</th>
         </tr>
     </thead>
-    <tbody class="bg-pink-50 text-sm">
+    <tbody class="bg-gray-50 text-sm">
         <tr>
             <td class="font-medium w-1/4">
                 Monday
@@ -35,7 +35,7 @@
                 </ul>
             </td>
         </tr>
-        <tr class="bg-blue-50">
+        <tr class="bg-white">
             <td class="font-medium">
                 Tuesday
             </td>
@@ -90,7 +90,7 @@
                 </ul>
             </td>
         </tr>
-        <tr class="bg-blue-50">
+        <tr class="bg-white">
             <td class="font-medium">
                 Thursday
             </td>
